			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Type errors generated by PL_get_<int-type>_ex() used by various
    built-ins.  If the argument is an integer out of range of the C-type,
    it throws a error(representation_error(CType), _) rather than
    a type_error.  Ulrich Neumerkel.


=============================
VERSION 5.6.37 (Jul 09, 2007)
=============================

  * FIXED: Bug#282: Possible crash in PL_close_query(). 
    Bernhard Kirchlechner.

  * PORT: Included various Cygwin issues contributed by Corinna Vinschen.

  * FIXED: Remove choicepoint from flatten/3.  Mike Elston.

  * FIXED: Handle seek/4 to negative positions in the object (now throws
    a domain error).

  * ADDED: Arithmetic function +/1.  Mike Elston,

  * FIXED: nicely maintain time in profiler/2, which is used by tprofile/1.

  * ADDED: library(error): types positive_integer and negative_integer.

  * ADDED: library(thread), providing some high-level concurrency
    predicates.

  * FIXED: Bug#291: format_time/3 using %Z for different character
    sets.  I'm not sure about this fix.  I cannot reproduce the problem.
    New code is definitely cleaner though.  [2nd try]. Dmitry?

  * ADDED: Allow for unquoted a/b in file-specifications for
    absolute_file_name/3 and derived predicates.  E.g. 
    :- use_module(library(semweb/rdf_db)).

=============================
VERSION 5.6.36 (Jun 20, 2007)
=============================

  * FIXED: More reliable handling of stack overflows.  Notably fixed
    problems running out of stack multiple times.  In particulary important
    for continuously running servers executing queries that may run out
    of stack.

  * ADDED: Library settings.pl for distributed management of application