@@ -7,6 +7,9 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ENHANCED: cyclic/1 and acyclic/1 now use last-argument optimization and
+    are protected against interrupts.   Ulrich Neumerkel.
+
   * FIXED: Type errors generated by PL_get_<int-type>_ex() used by various
     built-ins.  If the argument is an integer out of range of the C-type,
     it throws a error(representation_error(CType), _) rather than
